# kangwon-clone

./: .env.example  .gitignore  .poc-test.md  CLAUDE.md  CURRICULUM.md  PROJECT_OVERVIEW.md  README.md  REPORT.md  app.py  environment.yml  et --hard 624d622  golden_cases.py  pyproject.toml  requirements.txt  run.sh  student-week-sync-CLAUDE.md  week1.md
.claude/: settings.local.json
.github/: PR_DRAFT_week3.md  pull_request_template.md
.github/workflows/: assign-reviewer.yml  notify-convention.yml  notify-discord.yml
checks/: tool_inventory.py
docs/: ASSIGNMENT_CHECK_DESIGN.md  CONVERSATION_LOG.md  GLOSSARY.md  SUMMARY.md  WEEK04_FULL_AGENT_500_CASE_REPORT.md  WEEK04_IMPLEMENTATION_PLAN.md  WEEK04_MAIN_TASK_EXECUTION_PLAN.md  WEEK04_TIER1_REPORT.md  week02-prd.md  week02_prd.md  week03_learning_notes.md  week04-query-reliability-testplan.md
eval/: run_week04_eval.py  week04_cases.json
fixed/: __init__.py  agent_runtime.py  app_store.py  config.py  conversation_rag_store.py  external_mcp.py  external_people_store.py  langchain_trace.py  llm.py  mcp_client.py  reference_store.py  runtime_clock.py  schedule_decision.py  session_scope.py  store_base.py  trace.py  week_agent_registry.py
mcp_server/: __init__.py  sqlite_mcp_server.py
static/: app.css
student_parts/: __init__.py  week01_wake_up_nana.py  week02_structure_natural_language_requests.py  week03_build_nanas_logbook.py  week04_retrieve_nanas_memory.py
student_parts_baseline/: week03_build_nanas_logbook.py
tests/: manual_week04_query_reliability.py  test_week04_retrieve.py
(+3 files in other folders)
